--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
 .card-container {
   display: flex;
   justify-content: space-between;
@@ -19,7 +29,7 @@ ul {
 }
 
 .text-gray {
-  color: gray
+  color: gray;
 }
 
 .nav-list {
@@ -37,4 +47,26 @@ ul {
 
 .car-paper {
   padding: 50px;
+}
+
+.paper-container {
+  padding: 50px;
+}
+
+.div-container {
+  display: flex;
+  height: 50vh;
+  width: 100vw;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.div-container h1 {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.chips {
+  margin: 2px;
 }
